generated/checkers/gen/AllGen-Misuse-ec1aae190c7729ffdd3603de311dc00f7ff988f9/build_logs/syntax-repair-04/build_stderr_2.log
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In function ‘const clang::Expr* {anonymous}::getCountedByExprCompat(const clang::CountedByAttr*)’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:46:36: error: no matching function for call to ‘getCountedByExprCompatImpl(const clang::CountedByAttr*&, int)’
   46 |   return getCountedByExprCompatImpl(A, 0);
      |          ~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:31:13: note: candidate: ‘template<class T> decltype ((A->getCountedBy(), static_cast<const clang::Expr*>(nullptr))) {anonymous}::getCountedByExprCompatImpl(const T*, int)’
   31 | static auto getCountedByExprCompatImpl(const T *A, int)
      |             ^~~~~~~~~~~~~~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:31:13: note:   template argument deduction/substitution failed:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In substitution of ‘template<class T> decltype ((A->getCountedBy(), static_cast<const clang::Expr*>(nullptr))) {anonymous}::getCountedByExprCompatImpl(const T*, int) [with T = clang::CountedByAttr]’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:46:36:   required from here
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:32:20: error: ‘const class clang::CountedByAttr’ has no member named ‘getCountedBy’; did you mean ‘AT_CountedBy’?
   32 |     -> decltype(A->getCountedBy(), static_cast<const Expr *>(nullptr)) {
      |                 ~~~^~~~~~~~~~~~
      |                 AT_CountedBy
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:36:13: note: candidate: ‘template<class T> decltype ((A->getCountedByExpr(), static_cast<const clang::Expr*>(nullptr))) {anonymous}::getCountedByExprCompatImpl(const T*, long int)’
   36 | static auto getCountedByExprCompatImpl(const T *A, long)
      |             ^~~~~~~~~~~~~~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:36:13: note:   template argument deduction/substitution failed:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In substitution of ‘template<class T> decltype ((A->getCountedByExpr(), static_cast<const clang::Expr*>(nullptr))) {anonymous}::getCountedByExprCompatImpl(const T*, long int) [with T = clang::CountedByAttr]’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:46:36:   required from here
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:37:20: error: ‘const class clang::CountedByAttr’ has no member named ‘getCountedByExpr’; did you mean ‘getCountedByField’?
   37 |     -> decltype(A->getCountedByExpr(), static_cast<const Expr *>(nullptr)) {
      |                 ~~~^~~~~~~~~~~~~~~~
      |                 getCountedByField
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:41:13: note: candidate: ‘template<class T> decltype ((A->getExpr(), static_cast<const clang::Expr*>(nullptr))) {anonymous}::getCountedByExprCompatImpl(const T*, double)’
   41 | static auto getCountedByExprCompatImpl(const T *A, double)
      |             ^~~~~~~~~~~~~~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:41:13: note:   template argument deduction/substitution failed:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In substitution of ‘template<class T> decltype ((A->getExpr(), static_cast<const clang::Expr*>(nullptr))) {anonymous}::getCountedByExprCompatImpl(const T*, double) [with T = clang::CountedByAttr]’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:46:36:   required from here
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:42:20: error: ‘const class clang::CountedByAttr’ has no member named ‘getExpr’
   42 |     -> decltype(A->getExpr(), static_cast<const Expr *>(nullptr)) {
      |                 ~~~^~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: At global scope:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:138:6: warning: ‘static bool {anonymous}::SAGenTestChecker::recordHasCountedByFlexArray(const clang::RecordDecl*)’ defined but not used [-Wunused-function]
  138 | bool SAGenTestChecker::recordHasCountedByFlexArray(const RecordDecl *RD) {
      |      ^~~~~~~~~~~~~~~~
make[3]: *** [tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/build.make:76: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/SAGenTestChecker.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:31101: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:31108: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/rule] Error 2
make: *** [Makefile:7495: SAGenTestPlugin] Error 2
